Added/Updated Finnish translations by Jari Rahkonen <jari.rahkonen@pp1.inet.fi>.
(Old svn revision: 20043)

--- a/po/fi.po
+++ b/po/fi.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.28\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-25 11:01+0900\n"
-"PO-Revision-Date: 2006-02-23 17:12+0200\n"
+"PO-Revision-Date: 2006-02-24 16:37+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -256,16 +256,15 @@ msgstr "Ulkonäkö"
 #. size
 #: ../panel/panel-dialogs.c:1337
 msgid "Size (pixels):"
-msgstr ""
+msgstr "Koko (Kuvapisteinä)"
 
 #: ../panel/panel-dialogs.c:1360
-#, fuzzy
 msgid "Transparency (%):"
 msgstr "Läpinäkyvyys (%)"
 
 #: ../panel/panel-dialogs.c:1384
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "Tee aktiivisesta paneelista läpinäkymätön"
 
 #: ../panel/panel-dialogs.c:1425 ../panel/panel-dialogs.c:1463
 #: ../panel/panel-dialogs.c:1488
@@ -558,9 +557,9 @@ msgid "Always group tasks"
 msgstr "Ryhmitä tehtävät aina"
 
 #: ../plugins/windowlist/windowlist.c:308
-#, fuzzy, c-format
+#, c-format
 msgid "Workspace %d"
-msgstr "Lisää työtila"
+msgstr "Työtila %d"
 
 #: ../plugins/windowlist/windowlist.c:386
 #: ../plugins/windowlist/windowlist.c:392
@@ -568,14 +567,14 @@ msgid "Add workspace"
 msgstr "Lisää työtila"
 
 #: ../plugins/windowlist/windowlist.c:407
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace %d"
-msgstr "Poistetaanko paneeli \"%d\"?"
+msgstr "Poista työtila %d"
 
 #: ../plugins/windowlist/windowlist.c:409
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr ""
+msgstr "Poista työtila \"%s\""
 
 #: ../plugins/windowlist/windowlist.c:554
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
@@ -588,7 +587,7 @@ msgstr "Näytä kaikki työtilat"
 
 #: ../plugins/windowlist/windowlist.c:570
 msgid "Show Window Icons"
-msgstr ""
+msgstr "Näytä ikkunoiden kuvakkeet"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
