--- a/po/et.po
+++ b/po/et.po
@@ -1,31 +1,31 @@
 # Estonian translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Peeter Vois <peeter.vois@proekspert.ee>, 2004.
 # Mart Tõnso <mart.tonso@ttu.ee>, 2004.
+# Peeter Vois <peeter.vois@proekspert.ee>, 2004, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.28\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-25 22:53+0100\n"
-"PO-Revision-Date: 2005-09-29 20:23+0900\n"
+"PO-Revision-Date: 2006-02-28 15:32+0200\n"
 "Last-Translator: Mart Tõnso <mart.tonso@ttu.ee>\n"
 "Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Asi on ootamatult eemaldatud: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:572
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "_Eemalda"
+msgstr "Kas eemaldame: \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:704
 #: ../panel/panel-app.c:736 ../panel/panel-app.c:769
@@ -37,7 +37,7 @@ msgstr "Xfce Paneel"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "Asi eemaldatakse paneelilt ja selle seadistused kaovad."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:748
@@ -47,80 +47,74 @@ msgstr ""
 #: ../plugins/systray/systray.c:366 ../plugins/tasklist/tasklist.c:397
 #: ../plugins/windowlist/windowlist.c:540
 msgid "Properties"
-msgstr ""
+msgstr "Seadistused"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:765
 msgid "About"
-msgstr ""
+msgstr "Sellest"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
-#, fuzzy
 msgid "Move"
-msgstr "_Eemalda"
+msgstr "Nihuta"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:800
-#, fuzzy
 msgid "Remove"
-msgstr "_Eemalda"
+msgstr "Eemalda"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:817
-#, fuzzy
 msgid "Add New Item"
 msgstr "Lisa uus asi"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:829 ../panel/panel.c:647
 msgid "Customize Panel"
-msgstr ""
+msgstr "Kohanda paneeli"
 
 #: ../panel/panel.c:658 ../panel/panel-dialogs.c:601
 msgid "Add Items"
-msgstr ""
+msgstr "Lisa asju"
 
 #: ../panel/panel.c:673 ../plugins/actions/actions.c:399
 msgid "Quit"
-msgstr ""
+msgstr "Välju"
 
 #: ../panel/panel.c:683
-#, fuzzy
 msgid "Restart"
-msgstr "_Käivita uuesti"
+msgstr "Käivita uuesti"
 
 #: ../panel/panel.c:697
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce Paneel"
+msgstr "Xfce Paneelist"
 
 #: ../panel/panel-item-manager.c:357 ../panel/panel-item-manager.c:365
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "Ei suuda luua paneeli asja \"%s\"."
+msgstr "Ei suuda avada paneeli \"%s\" moodulit"
 
 #: ../panel/panel-app.c:215 ../panel/panel-app.c:706
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce Paneel"
+msgstr "Kas väljume Xfce Paneelist?"
 
 #: ../panel/panel-app.c:707
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "Te ei saa eemaldada viimast paneeli. Kas te soovite programmist väljuda?"
 
 #: ../panel/panel-app.c:734
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Kas eemaldame paneeli \"%d\"?"
 
 #: ../panel/panel-app.c:738
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Valitud panel ja kõik selle asjad eemaldatakse."
 
 #: ../panel/panel-app.c:777
 msgid "Developer"
-msgstr ""
+msgstr "Arendaja"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -132,8 +126,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Xfce Paneel\n"
-" Versioon %s\n"
+" Xfce Paneel %s\n"
 "\n"
 " See on osa Xfce töölaua keskkonnast\n"
 " http://www.xfce.org\n"
@@ -147,6 +140,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Kasutus: %s [VALIKUD]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -162,45 +157,56 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" VALIKUD\n"
+" -h, --help      Näita seda teksti ja välju\n"
+" -v, --version   Näita seda teksti ja välju\n"
+" -c, --customize Näita konfiguratsiooni dialoogi\n"
+" -s, --save      Salvesta konfiguratsioon\n"
+" -r, --restart   Paneelide taaskäivitamine\n"
+" -q, --quit      Lõpeta sessioon\n"
+" -x, --exit      Sulge kõik paneelid ja välju\n"
+" -a, --add       Lisa uued asjad\n"
+"\n"
 
 #: ../panel/panel-dialogs.c:616
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
+"Kanna asjad nimekirjast paneelile "
+"või eemalda kandes nad tagasi nimekirja."
 
 #: ../panel/panel-dialogs.c:629
 msgid "Available Items"
-msgstr ""
+msgstr "Saada olevad asjad"
 
 #: ../panel/panel-dialogs.c:842 ../panel/panel-dialogs.c:1066
 msgid "Normal Width"
-msgstr ""
+msgstr "Normaalne laius"
 
 #: ../panel/panel-dialogs.c:844 ../panel/panel-dialogs.c:1068
 msgid "Full Width"
-msgstr ""
+msgstr "Täislaius"
 
 #: ../panel/panel-dialogs.c:850 ../panel/panel-dialogs.c:1074
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Redaktor"
+msgstr "Vahe monitorid"
 
 #: ../panel/panel-dialogs.c:910 ../panel/panel-dialogs.c:1139
 msgid "Left"
-msgstr ""
+msgstr "Vasakul"
 
 #: ../panel/panel-dialogs.c:912 ../panel/panel-dialogs.c:1141
 msgid "Right"
-msgstr ""
+msgstr "Paremal"
 
 #: ../panel/panel-dialogs.c:917 ../panel/panel-dialogs.c:1146
 msgid "Top"
-msgstr ""
+msgstr "Ülal"
 
 #: ../panel/panel-dialogs.c:919 ../panel/panel-dialogs.c:1148
 msgid "Bottom"
-msgstr ""
+msgstr "All"
 
 #. position
 #: ../panel/panel-dialogs.c:947
@@ -208,23 +214,20 @@ msgid "Position"
 msgstr "Asukoht"
 
 #: ../panel/panel-dialogs.c:961
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Asukoht"
+msgstr "Fikseeritud asukoht"
 
 #: ../panel/panel-dialogs.c:967
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Vabalt liigudatav"
 
 #: ../panel/panel-dialogs.c:1082
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Automaatne varjamine"
+msgstr "Automaatne_varjamine"
 
 #: ../panel/panel-dialogs.c:1100
-#, fuzzy
 msgid "Orientation:"
-msgstr "Paneeli orientatsioon:"
+msgstr "Orientatsioon:"
 
 #: ../panel/panel-dialogs.c:1112
 msgid "Horizontal"
@@ -235,19 +238,16 @@ msgid "Vertical"
 msgstr "Vertikaalne"
 
 #: ../panel/panel-dialogs.c:1123
-#, fuzzy
 msgid "Handle:"
-msgstr "Asukoht"
+msgstr "Sang:"
 
 #: ../panel/panel-dialogs.c:1135
-#, fuzzy
 msgid "At both sides"
-msgstr "Automaatne varjamine"
+msgstr "Mõlemal küljel"
 
 #: ../panel/panel-dialogs.c:1208
-#, fuzzy
 msgid "Select Monitor"
-msgstr "Redaktor"
+msgstr "Vali monitor"
 
 #: ../panel/panel-dialogs.c:1326 ../plugins/clock/clock.c:431
 msgid "Appearance"
@@ -256,56 +256,49 @@ msgstr "Väljanägemine"
 #. size
 #: ../panel/panel-dialogs.c:1337
 msgid "Size (pixels):"
-msgstr ""
+msgstr "Suurus (punktides):"
 
 #: ../panel/panel-dialogs.c:1360
 msgid "Transparency (%):"
-msgstr ""
+msgstr "Läbipaistvus (%):"
 
 #: ../panel/panel-dialogs.c:1384
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "Tee aktiivne paneel läbipaistvaks"
 
 #: ../panel/panel-dialogs.c:1425 ../panel/panel-dialogs.c:1463
 #: ../panel/panel-dialogs.c:1488
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "Xfce Paneel"
+msgstr "Paneel %d"
 
 #: ../panel/panel-dialogs.c:1509
-#, fuzzy
 msgid "Remove Panel"
-msgstr "_Eemalda"
+msgstr "Eemalda paneel"
 
 #: ../panel/panel-dialogs.c:1522
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce Paneel"
+msgstr "Uus Paneel"
 
 #: ../panel/panel-dialogs.c:1606
-#, fuzzy
 msgid "Panel Manager"
-msgstr "Paneeli suurus:"
+msgstr "Paneeli haldur"
 
 #: ../plugins/actions/actions.c:374
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Paneeli seaded"
+msgstr "Paneeli tegevused"
 
 #: ../plugins/actions/actions.c:391
-#, fuzzy
 msgid "Select action type:"
-msgstr "Vali käsklus"
+msgstr "Vali tegevuse tüüp"
 
 #: ../plugins/actions/actions.c:400
-#, fuzzy
 msgid "Lock screen"
-msgstr "_Lukusta ekraan"
+msgstr "Lukusta ekraan"
 
 #: ../plugins/actions/actions.c:401
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "_Lukusta ekraan"
+msgstr "Välju + lukusta ekraan"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -316,14 +309,12 @@ msgstr "_Lukusta ekraan"
 #. * %Y  : four digit year
 #.
 #: ../plugins/clock/clock.c:109
-#, fuzzy
 msgid "%A %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%A %d %B %Y"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Lukusta"
+msgstr "Kell"
 
 #. Keep order in sync with XfceClockMode
 #: ../plugins/clock/clock.c:446
@@ -340,51 +331,46 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:395
 msgid "Show _frame"
-msgstr ""
+msgstr "Näita _raami"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
-msgstr ""
+msgstr "Kella seaded"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "Kasuta 24 _h kella"
 
 #: ../plugins/clock/clock.c:479
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "EL/PL"
+msgstr "Näita EL/PL"
 
 #: ../plugins/clock/clock.c:487
 msgid "Display seconds"
-msgstr ""
+msgstr "Näita sekundeid"
 
 #: ../plugins/iconbox/iconbox.c:807
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "Ikoonikasti seaded"
+msgstr "Ikoonikasti"
 
 #: ../plugins/iconbox/iconbox.c:821
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Näita rakenduste _nimesid"
+msgstr "Näita ainult vähendatud rakendusi"
 
 #: ../plugins/launcher/launcher.c:361 ../plugins/launcher/launcher.c:410
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "Ei suuda luua paneeli asja \"%s\"."
+msgstr "Ei suutnud käivitada \"%s\"."
 
 #: ../plugins/launcher/launcher.c:621 ../plugins/launcher/launcher.c:1240
 #: ../plugins/launcher/launcher-dialog.c:1119
-#, fuzzy
 msgid "New Item"
-msgstr "Lisa uus asi"
+msgstr "Uus asi"
 
 #: ../plugins/launcher/launcher.c:679 ../plugins/launcher/launcher.c:1241
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "Sellel asjal ei ole midagi sättida"
+msgstr "Seda asja ei ole veel sätitud"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -439,39 +425,34 @@ msgid "Terminal"
 msgstr "Terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:377
-#, fuzzy
 msgid "Select image file"
-msgstr "Vali fail"
+msgstr "Vali pildi fail"
 
 #: ../plugins/launcher/launcher-dialog.c:423
 msgid "Select command"
 msgstr "Vali käsklus"
 
 #: ../plugins/launcher/launcher-dialog.c:446
-#, fuzzy
 msgid "Name"
-msgstr "Mängud"
+msgstr "Nimi"
 
 #: ../plugins/launcher/launcher-dialog.c:464
-#, fuzzy
 msgid "Description"
-msgstr "Asukoht"
+msgstr "Kirjeldus"
 
 #: ../plugins/launcher/launcher-dialog.c:519
 msgid "Other..."
-msgstr ""
+msgstr "Muu..."
 
 #: ../plugins/launcher/launcher-dialog.c:605
-#, fuzzy
 msgid "Command"
-msgstr "Käsklus:"
+msgstr "Käsklus"
 
 #: ../plugins/launcher/launcher-dialog.c:641
 msgid "Run in _terminal"
 msgstr "Käivita _terminalis"
 
 #: ../plugins/launcher/launcher-dialog.c:659
-#, fuzzy
 msgid "Use _startup notification"
 msgstr "Kasuta _stardi teavitust"
 
@@ -480,11 +461,12 @@ msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"Esimene nimekirja asi on näidatud paneelil."
+"Lisanduvad asjad ilmnevad menüüs."
 
 #: ../plugins/launcher/launcher-dialog.c:1296
-#, fuzzy
 msgid "Program Launcher"
-msgstr "Lisa käivitajale menüü"
+msgstr "Programmi startija"
 
 #: ../plugins/launcher/launcher-dialog.c:1632
 msgid "Select file"
@@ -504,26 +486,24 @@ msgstr "Veergude arv:"
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "Eraldaja"
+msgstr "Eraldaja või vahe"
 
 #: ../plugins/separator/separator.c:284
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Eraldaja"
+msgstr "_Joonista eraldaja"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
-msgstr ""
+msgstr "_Paisuta"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "Taasra varjatud aknad"
 
 #: ../plugins/showdesktop/showdesktop.c:33
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "Varja aknad ja näita töölauda"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -537,13 +517,12 @@ msgstr "Ei suutnud süsteemi teateala registreerida: %s"
 #: ../plugins/systray/systray.c:382
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "Süsteemi riba"
 
 #: ../plugins/tasklist/tasklist.c:413 ../plugins/tasklist/tasklist.c:466
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Rakendused"
+msgstr "Tegevuste nimekiri"
 
 #: ../plugins/tasklist/tasklist.c:430
 msgid "Size"
@@ -551,11 +530,11 @@ msgstr "Suurus"
 
 #: ../plugins/tasklist/tasklist.c:438
 msgid "Minimum Width:"
-msgstr ""
+msgstr "Vähim laius:"
 
 #: ../plugins/tasklist/tasklist.c:453
 msgid "Use all available space"
-msgstr ""
+msgstr "Kasuta kogu saadavat ruumi"
 
 #: ../plugins/tasklist/tasklist.c:470
 msgid "Show tasks from _all workspaces"
@@ -566,70 +545,65 @@ msgid "Show application _names"
 msgstr "Näita rakenduste _nimesid"
 
 #: ../plugins/tasklist/tasklist.c:494
-#, fuzzy
 msgid "Never group tasks"
-msgstr "_Grupita rakendusi alati"
+msgstr "Tegevusi ei grupeerita mitte iialgi"
 
 #: ../plugins/tasklist/tasklist.c:497
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "_Grupita rakendusi alati"
+msgstr "Tegevusi grupitatakse alati"
 
 #: ../plugins/tasklist/tasklist.c:500
-#, fuzzy
 msgid "Always group tasks"
-msgstr "_Grupita rakendusi alati"
+msgstr "Grupita tegevusi alati"
 
 #: ../plugins/windowlist/windowlist.c:309
 #, c-format
 msgid "Workspace %d"
-msgstr ""
+msgstr "Tööruum %d"
 
 #: ../plugins/windowlist/windowlist.c:387
 #: ../plugins/windowlist/windowlist.c:393
 msgid "Add workspace"
-msgstr ""
+msgstr "Lisa tööruum"
 
 #: ../plugins/windowlist/windowlist.c:408
 #, c-format
 msgid "Remove Workspace %d"
-msgstr ""
+msgstr "Eemalda tööruum %d"
 
 #: ../plugins/windowlist/windowlist.c:410
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr ""
+msgstr "Eemalda tööruum '%s'"
 
 #: ../plugins/windowlist/windowlist.c:555
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "Ekende nimekiri"
 
 #: ../plugins/windowlist/windowlist.c:566
 msgid "Include all Workspaces"
-msgstr ""
+msgstr "Lisa kõik tööruumid"
 
 #: ../plugins/windowlist/windowlist.c:571
 msgid "Show Window Icons"
-msgstr ""
+msgstr "Näita akende ikoone"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Tegevuse nupud"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Lukusta ekraan"
+msgstr "Välju või lukusta ekraan"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Mis aeg on?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Näita rakenduste _nimesid"
+msgstr "Näita kõigi töötavate rakenduste ikoone"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -637,46 +611,43 @@ msgstr "Startija"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Programmi käivitaja koos vaba menüüga"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Minivaade kõigist virtuaalsetest töölaudadest"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Paneb vahe või joone paneeli asjade vahele"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "Näita töölauda"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr ""
+msgstr "Lülita töölauda näita / varja"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Näita rakenduste _nimesid"
+msgstr "Näita märguannete ikoone"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Näita rakenduste _nimesid"
+msgstr "Näita kõiki töötavaid rakendusi"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "Näita saadavate akende nimistut"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Startija"
+msgstr "Testjublunn"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Sellel jublunnil ei ole mõtet"
 
 #, fuzzy
 #~ msgid "Separator or Separator"
