Updated Japanese translations.
(Old svn revision: 20210)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.30\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 19:15+0900\n"
-"PO-Revision-Date: 2006-02-27 00:01+0900\n"
+"PO-Revision-Date: 2006-03-04 21:04+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -371,7 +371,7 @@ msgstr "「%s」を実行できませんでした"
 #: ../plugins/launcher/launcher.c:397
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "コマンド「%s」でエラーが発生しました"
 
 #: ../plugins/launcher/launcher.c:644 ../plugins/launcher/launcher.c:1249
 #: ../plugins/launcher/launcher-dialog.c:1119
