--- a/po/eu.po
+++ b/po/eu.po
@@ -1,21 +1,22 @@
+# translation of eu.po to librezale
 # Euskera translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Jon Latorre Martinez <patataman@airtel.net>, 2003.
-# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005.
 #
+# Jon Latorre Martinez <patataman@airtel.net>, 2003.
+# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.30\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 19:15+0900\n"
-"PO-Revision-Date: 2005-10-29 17:07+0900\n"
+"PO-Revision-Date: 2006-03-06 21:37+0100\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: librezale.org <librezale@librezale.org>\n"
+"Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.11.2\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. dialogs are annoying, just spit out a warning
@@ -38,8 +39,7 @@ msgid "Xfce Panel"
 msgstr "Xfce Panela"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu "
 "egingo da."
@@ -181,7 +181,6 @@ msgstr ""
 "zerrendara eraman berriz."
 
 #: ../panel/panel-dialogs.c:629
-#, fuzzy
 msgid "Available Items"
 msgstr "Elementu erabilgarriak"
 
@@ -261,16 +260,15 @@ msgstr "Itxura"
 #. size
 #: ../panel/panel-dialogs.c:1337
 msgid "Size (pixels):"
-msgstr ""
+msgstr "Tamaina (pixel):"
 
 #: ../panel/panel-dialogs.c:1360
-#, fuzzy
 msgid "Transparency (%):"
-msgstr "Gardentasuna"
+msgstr "Gardentasuna (%):"
 
 #: ../panel/panel-dialogs.c:1384
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "Panel aktiboa belztu"
 
 #: ../panel/panel-dialogs.c:1425 ../panel/panel-dialogs.c:1463
 #: ../panel/panel-dialogs.c:1488
@@ -372,7 +370,7 @@ msgstr "Ezin da \"%s\" abiarazi."
 #: ../plugins/launcher/launcher.c:397
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "Errorea \"%s\" komandoan"
 
 #: ../plugins/launcher/launcher.c:644 ../plugins/launcher/launcher.c:1249
 #: ../plugins/launcher/launcher-dialog.c:1119
@@ -497,9 +495,8 @@ msgstr "Zutabe kopurua:"
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "Bereizlea"
+msgstr "Bereizlea edo Lekua"
 
 #: ../plugins/separator/separator.c:284
 msgid "_Draw Separator"
@@ -529,7 +526,7 @@ msgstr "Ezinezkoa ikono bandeja erregistratzea: %s"
 #: ../plugins/systray/systray.c:366
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "Sistema barra"
 
 #: ../plugins/tasklist/tasklist.c:413 ../plugins/tasklist/tasklist.c:466
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
@@ -569,9 +566,9 @@ msgid "Always group tasks"
 msgstr "Beti _taldekatu lanak"
 
 #: ../plugins/windowlist/windowlist.c:309
-#, fuzzy, c-format
+#, c-format
 msgid "Workspace %d"
-msgstr "Idazmahai gehitu"
+msgstr "%d Idazmahai"
 
 #: ../plugins/windowlist/windowlist.c:387
 #: ../plugins/windowlist/windowlist.c:393
@@ -579,14 +576,14 @@ msgid "Add workspace"
 msgstr "Idazmahai gehitu"
 
 #: ../plugins/windowlist/windowlist.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace %d"
-msgstr "\"%d\" Panela Ezabatu?"
+msgstr "%d Idazmahai Ezabatu"
 
 #: ../plugins/windowlist/windowlist.c:410
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr ""
+msgstr "'%s' Idazmahai Ezabatu"
 
 #: ../plugins/windowlist/windowlist.c:555
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
@@ -599,7 +596,7 @@ msgstr "Idazmahai guztiak barne"
 
 #: ../plugins/windowlist/windowlist.c:571
 msgid "Show Window Icons"
-msgstr ""
+msgstr "Leiho Ikonoak Bistarazi"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -660,3 +657,4 @@ msgstr "Proba Plugina"
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
 msgstr "Plugin honek ez du zereginik"
+
