--- a/po/eo.po
+++ b/po/eo.po
@@ -1,15 +1,15 @@
 # Esperanto translations for the xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Sylvain Vedrenne <sylvain.vedrenne@free.fr>, 2005.
+# Sylvain Vedrenne <gnu_sylvain@xfce.org>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.30\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 19:15+0900\n"
-"PO-Revision-Date: 2005-09-29 20:22+0900\n"
-"Last-Translator: Sylvain Vedrenne <sylvain.vedrenne@free.fr>\n"
+"PO-Revision-Date: 2006-03-12 15:45+0100\n"
+"Last-Translator: Sylvain Vedrenne <gnu_sylvain@xfce.org>\n"
 "Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,9 +23,9 @@ msgid "An item was unexpectedly removed: \"%s\"."
 msgstr ""
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:572
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "Forigi la elementon %s?"
+msgstr "Ĉu forigu \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:704
 #: ../panel/panel-app.c:736 ../panel/panel-app.c:769
@@ -33,7 +33,7 @@ msgstr "Forigi la elementon %s?"
 #: ../plugins/launcher/launcher.c:374 ../plugins/launcher/launcher.c:400
 #: ../plugins/launcher/launcher.c:436
 msgid "Xfce Panel"
-msgstr "Xfce-a Panelo"
+msgstr "Xfce Panelo"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
@@ -57,19 +57,16 @@ msgstr ""
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
-#, fuzzy
 msgid "Move"
-msgstr "Forigi la elementon %s?"
+msgstr "Movu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:800
-#, fuzzy
 msgid "Remove"
-msgstr "Forigi la elementon %s?"
+msgstr "Forigu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:817
-#, fuzzy
 msgid "Add New Item"
-msgstr "Novan elementon"
+msgstr "Aldonu Novan elementon"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:829 ../panel/panel.c:653
 msgid "Customize Panel"
@@ -84,26 +81,21 @@ msgid "Quit"
 msgstr ""
 
 #: ../panel/panel.c:689
-#, fuzzy
 msgid "Restart"
-msgstr "_Restartigu"
+msgstr "Restartigu"
 
 #: ../panel/panel.c:703
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce-a Panelo"
+msgstr "Pri la Xfce Panelo"
 
 #: ../panel/panel-item-manager.c:357 ../panel/panel-item-manager.c:365
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr ""
-"Malsukcesis startigi \"%s\":\n"
-"%s"
+msgstr "Malsukcesis malfermi la modulon \"%s\""
 
 #: ../panel/panel-app.c:215 ../panel/panel-app.c:706
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce-a Panelo"
+msgstr "Ĉu Audiaŭu la Xfce Panelon?"
 
 #: ../panel/panel-app.c:707
 msgid "You can't remove the last panel. Would you like to exit the program?"
@@ -123,7 +115,7 @@ msgid "Developer"
 msgstr "Programisto"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -135,10 +127,9 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" La Xfce-a Panelo\n"
-" Eldono %s\n"
-"\n"
-" Parto de la Xfce-a Labortabla Medio\n"
+" Xfce Panelo %s\n"
+" \n"
+" Parto de la Xfce Labortabla Medio\n"
 " http://www.xfce.org\n"
 "\n"
 " Disdonita laŭ la GNU GPL.\n"
@@ -177,19 +168,16 @@ msgid "Available Items"
 msgstr ""
 
 #: ../panel/panel-dialogs.c:842 ../panel/panel-dialogs.c:1066
-#, fuzzy
 msgid "Normal Width"
-msgstr "Tuta larĝo:"
+msgstr "Normala Larĝo"
 
 #: ../panel/panel-dialogs.c:844 ../panel/panel-dialogs.c:1068
-#, fuzzy
 msgid "Full Width"
-msgstr "Tuta larĝo:"
+msgstr "Plena larĝo"
 
 #: ../panel/panel-dialogs.c:850 ../panel/panel-dialogs.c:1074
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Redaktilo"
+msgstr "Kunmeti Ekranojn"
 
 #: ../panel/panel-dialogs.c:910 ../panel/panel-dialogs.c:1139
 msgid "Left"
@@ -213,23 +201,20 @@ msgid "Position"
 msgstr "Pozicio"
 
 #: ../panel/panel-dialogs.c:961
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Pozicio"
+msgstr "Fiksa Pozicio"
 
 #: ../panel/panel-dialogs.c:967
 msgid "Freely Moveable"
 msgstr ""
 
 #: ../panel/panel-dialogs.c:1082
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Aŭtomate kaŝu"
+msgstr "Aŭtomate _kaŝu"
 
 #: ../panel/panel-dialogs.c:1100
-#, fuzzy
 msgid "Orientation:"
-msgstr "Direkto de la panelo:"
+msgstr "Direkto:"
 
 #: ../panel/panel-dialogs.c:1112
 msgid "Horizontal"
@@ -240,18 +225,16 @@ msgid "Vertical"
 msgstr "Vertikala"
 
 #: ../panel/panel-dialogs.c:1123
-#, fuzzy
 msgid "Handle:"
-msgstr "Pozicio"
+msgstr "Anso:"
 
 #: ../panel/panel-dialogs.c:1135
 msgid "At both sides"
 msgstr "Ĉe la du flankoj"
 
 #: ../panel/panel-dialogs.c:1208
-#, fuzzy
 msgid "Select Monitor"
-msgstr "Redaktilo"
+msgstr "Elektu Ekranon"
 
 #: ../panel/panel-dialogs.c:1326 ../plugins/clock/clock.c:431
 msgid "Appearance"
@@ -263,9 +246,8 @@ msgid "Size (pixels):"
 msgstr ""
 
 #: ../panel/panel-dialogs.c:1360
-#, fuzzy
 msgid "Transparency (%):"
-msgstr "Transparenteco"
+msgstr "Travidebleco (%):"
 
 #: ../panel/panel-dialogs.c:1384
 msgid "Make active panel opaque"
@@ -273,44 +255,37 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:1425 ../panel/panel-dialogs.c:1463
 #: ../panel/panel-dialogs.c:1488
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "Xfce-a Panelo"
+msgstr "Panelo %d"
 
 #: ../panel/panel-dialogs.c:1509
-#, fuzzy
 msgid "Remove Panel"
-msgstr "Forigi la elementon %s?"
+msgstr "Forigu Panelon"
 
 #: ../panel/panel-dialogs.c:1522
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce-a Panelo"
+msgstr "Novan Panelon"
 
 #: ../panel/panel-dialogs.c:1606
-#, fuzzy
 msgid "Panel Manager"
-msgstr "Dimensioj de la panelo:"
+msgstr "Administrilo de Panelo"
 
 #: ../plugins/actions/actions.c:399
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Parametroj de la Panelo"
+msgstr "Panelaj Agoj"
 
 #: ../plugins/actions/actions.c:416
-#, fuzzy
 msgid "Select action type:"
-msgstr "Elektu komandon"
+msgstr "Elektu specon de ago:"
 
 #: ../plugins/actions/actions.c:425
-#, fuzzy
 msgid "Lock screen"
-msgstr "_Ŝlosu la ekranon"
+msgstr "Ŝlosu la ekranon"
 
 #: ../plugins/actions/actions.c:426
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "_Ŝlosu la ekranon"
+msgstr "Audiaŭa + Ŝlosa ekrano"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -325,9 +300,8 @@ msgid "%A %d %B %Y"
 msgstr "%A %Y %B %d"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Ŝlosu"
+msgstr "Horloĝo"
 
 #. Keep order in sync with XfceClockMode
 #: ../plugins/clock/clock.c:446
@@ -343,9 +317,8 @@ msgid "LED"
 msgstr "LED"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:379
-#, fuzzy
 msgid "Show _frame"
-msgstr "Montru la _horon"
+msgstr "Montru la _kadron"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
@@ -356,32 +329,26 @@ msgid "Use 24-_hour clock"
 msgstr ""
 
 #: ../plugins/clock/clock.c:479
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "Montru AM/PM"
 
 #: ../plugins/clock/clock.c:487
-#, fuzzy
 msgid "Display seconds"
-msgstr "Montru la horon antaŭ la piktogramojn"
+msgstr "Montru la sekundojn"
 
 #: ../plugins/iconbox/iconbox.c:807
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "Piktogramokesto"
+msgstr "Piktogramkesto"
 
 #: ../plugins/iconbox/iconbox.c:821
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "_Montru nur la aplikaĵojn etigitajn"
+msgstr "Montru nur la etigitajn aplikaĵojn"
 
 #: ../plugins/launcher/launcher.c:372 ../plugins/launcher/launcher.c:434
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr ""
-"Malsukcesis startigi \"%s\":\n"
-"%s"
+msgstr "Malsukcesis startigi \"%s\""
 
 #: ../plugins/launcher/launcher.c:397
 #, c-format
@@ -390,7 +357,6 @@ msgstr ""
 
 #: ../plugins/launcher/launcher.c:644 ../plugins/launcher/launcher.c:1249
 #: ../plugins/launcher/launcher-dialog.c:1119
-#, fuzzy
 msgid "New Item"
 msgstr "Novan elementon"
 
@@ -487,13 +453,12 @@ msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
-"La unua elemento de la listo estas montrita sur la panelo. Aliaj elementoj\n"
-"estos videbla en menuo"
+"La unua elemento de la listo estas montrita sur la panelo. "
+"Aliaj elementoj estos videblaj en menuo."
 
 #: ../plugins/launcher/launcher-dialog.c:1296
-#, fuzzy
 msgid "Program Launcher"
-msgstr "Lanĉilo"
+msgstr "Lanĉilo de Programo"
 
 #: ../plugins/launcher/launcher-dialog.c:1632
 msgid "Select file"
@@ -513,14 +478,12 @@ msgstr "Nombro da vertikaloj"
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "Disigilo"
+msgstr "Disigilo aŭ Interspaco"
 
 #: ../plugins/separator/separator.c:284
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Disigilo"
+msgstr "_Streku Disigilon"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
@@ -536,12 +499,12 @@ msgstr ""
 
 #: ../plugins/systray/systray.c:66
 msgid "There is already a system tray running on this screen"
-msgstr "Iu seancadministrila avisoregiono jam estas kuranta ĉe tiu ekrano"
+msgstr "Iu seancadministrila avizregiono jam estas kuranta ĉe tiu ekrano"
 
 #: ../plugins/systray/systray.c:72
 #, c-format
 msgid "Unable to register system tray: %s"
-msgstr "Malsukcesas registri la seancadministrilan avisoregionon:\" %s"
+msgstr "Malsukcesas registri la seancadministrilan avizregionon: %s"
 
 #: ../plugins/systray/systray.c:366
 #: ../plugins/systray/systray.desktop.in.in.h:2
@@ -550,7 +513,6 @@ msgstr ""
 
 #: ../plugins/tasklist/tasklist.c:413 ../plugins/tasklist/tasklist.c:466
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
 msgstr "Taskolisto"
 
@@ -575,19 +537,16 @@ msgid "Show application _names"
 msgstr "Montru la _nomojn de la aplikaĵoj"
 
 #: ../plugins/tasklist/tasklist.c:494
-#, fuzzy
 msgid "Never group tasks"
-msgstr "Ĉiam _grupigu la taskojn"
+msgstr "Neniam grupigu taskojn"
 
 #: ../plugins/tasklist/tasklist.c:497
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "Ĉiam _grupigu la taskojn"
+msgstr "Aŭtomate grupigu taskojn"
 
 #: ../plugins/tasklist/tasklist.c:500
-#, fuzzy
 msgid "Always group tasks"
-msgstr "Ĉiam _grupigu la taskojn"
+msgstr "Ĉiam grupigu la taskojn"
 
 #: ../plugins/windowlist/windowlist.c:309
 #, c-format
@@ -627,18 +586,16 @@ msgid "Action Buttons"
 msgstr ""
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Ŝlosu la ekranon"
+msgstr "Adiaŭu aŭ ŝlosu la ekranon"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "_Montru nur la aplikaĵojn etigitajn"
+msgstr "Montru la piktogramojn de ĉiuj la kurantaj aplikaĵoj"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -665,23 +622,20 @@ msgid "Toggle desktop show/hide"
 msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Montru _avizopiktogramojn"
+msgstr "Montru la avizpiktogramojn"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "_Montru nur la aplikaĵojn etigitajn"
+msgstr "Montru ĉiujn kurantajn aplikaĵojn"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
 msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Lanĉilokromaĵo"
+msgstr "Testkromaĵo"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
